Portable serialization